@@ -4,8 +4,10 @@ import greencity.constant.ErrorMessage;
 import greencity.dto.location.api.LocationDto;
 import greencity.enums.LocationDivision;
 import greencity.exceptions.NotFoundException;
-import lombok.RequiredArgsConstructor;
+import org.apache.commons.collections4.CollectionUtils;
 import org.apache.commons.lang.StringUtils;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.cache.annotation.Cacheable;
 import org.springframework.cache.annotation.EnableCaching;
 import org.springframework.core.ParameterizedTypeReference;
 import org.springframework.http.HttpMethod;
@@ -13,21 +15,19 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 import org.springframework.web.client.RestTemplate;
 import org.springframework.web.util.UriComponentsBuilder;
+
 import java.net.URI;
-import java.util.Map;
+import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
-import java.util.Arrays;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
-import org.apache.commons.collections4.CollectionUtils;
-import org.springframework.cache.annotation.Cacheable;
+import java.util.stream.Collectors;
 
 @Service
 @EnableCaching
-@RequiredArgsConstructor
 public class LocationApiServiceImpl implements LocationApiService {
     private static final String API_URL = "https://directory.org.ua/api/katottg";
     private static final int DEFAULT_PAGE_SIZE = 125;
@@ -46,7 +46,17 @@ public class LocationApiServiceImpl implements LocationApiService {
         .id(KYIV_ID)
         .locationNameMap(Map.of(NAME, NAME_KYIV_UA, NAME_EN, NAME_KYIV_EN))
         .build();
-    private final RestTemplate restTemplate;
+    private RestTemplate restTemplate;
+
+    /**
+     * Constructor for the LocationApiService class.
+     *
+     * @param restTemplate An instance of RestTemplate for making HTTP requests.
+     */
+    @Autowired
+    public LocationApiServiceImpl(RestTemplate restTemplate) {
+        this.restTemplate = restTemplate;
+    }
 
     /**
      * {@inheritDoc}
@@ -67,7 +77,7 @@ public class LocationApiServiceImpl implements LocationApiService {
         String cityId = city.getId();
         List<LocationDto> allDistricts = getAllDistrictsInCityByCityID(cityId);
         if (allDistricts.isEmpty()) {
-            return List.of(city);
+            return Arrays.asList(city);
         }
         return allDistricts;
     }
@@ -75,7 +85,7 @@ public class LocationApiServiceImpl implements LocationApiService {
     static String replaceAllQuotes(String input) {
         Pattern pattern = Pattern.compile("[`'‘’“”‛‟ʼ«»\"]");
         Matcher matcher = pattern.matcher(input);
-        StringBuilder sb = new StringBuilder();
+        StringBuffer sb = new StringBuffer();
         while (matcher.find()) {
             matcher.appendReplacement(sb, "’");
         }
@@ -121,7 +131,7 @@ public class LocationApiServiceImpl implements LocationApiService {
         List<LocationDto> districts = getAllDistrictInTheRegionsById(region.getId());
         List<LocationDto> localCommunities = districts.stream()
             .flatMap(district -> getAllLocalCommunitiesById(district.getId()).stream())
-            .toList();
+            .collect(Collectors.toList());
         List<LocationDto> cities = localCommunities.stream()
             .flatMap(community -> getAllCitiesById(community.getId()).stream())
             .collect(Collectors.toList());
@@ -235,7 +245,7 @@ public class LocationApiServiceImpl implements LocationApiService {
             throw new NotFoundException(
                 String.format(ErrorMessage.NOT_FOUND_LOCATION_ON_LEVEL_AND_BY_CODE, level, code));
         }
-        return resultFromUrl.getFirst();
+        return resultFromUrl.get(0);
     }
 
     /**
@@ -274,15 +284,10 @@ public class LocationApiServiceImpl implements LocationApiService {
     @Cacheable(value = "resultFromUrl", key = "#url")
     public List<LocationDto> getResultFromUrl(URI url) {
         ParameterizedTypeReference<Map<String, Object>> typeRef =
-            new ParameterizedTypeReference<>() {
+            new ParameterizedTypeReference<Map<String, Object>>() {
             };
         ResponseEntity<Map<String, Object>> response = restTemplate.exchange(url, HttpMethod.GET, null, typeRef);
-
-        if (response == null || response.getBody() == null) {
-            throw new NotFoundException(ErrorMessage.NOT_FOUND_LOCATION_BY_URL + url);
-        }
-
-        return Optional.of(response)
+        return Optional.ofNullable(response)
             .map(ResponseEntity::getBody)
             .map(body -> (List<Map<String, Object>>) body.get(RESULTS))
             .orElseThrow(() -> new NotFoundException(ErrorMessage.NOT_FOUND_LOCATION_BY_URL + url))
