@@ -4,17 +4,17 @@ import com.netflix.hystrix.exception.HystrixRuntimeException;
 import greencity.client.UserRemoteClient;
 import greencity.constant.AppConstant;
 import greencity.constant.ErrorMessage;
-import greencity.dto.employee.EmployeeWithTariffsIdDto;
+import greencity.dto.employee.EmployeePositionsDto;
 import greencity.dto.employee.EmployeeSignUpDto;
 import greencity.dto.employee.EmployeeWithTariffsDto;
+import greencity.dto.employee.EmployeeWithTariffsIdDto;
 import greencity.dto.employee.GetEmployeeDto;
-import greencity.dto.employee.EmployeePositionsDto;
 import greencity.dto.pageble.PageableDto;
 import greencity.dto.position.AddingPositionDto;
 import greencity.dto.position.PositionDto;
 import greencity.dto.tariff.GetTariffInfoForEmployeeDto;
 import greencity.dto.tariff.TariffWithChatAccess;
-import greencity.entity.TariffsInfoRecievingEmployee;
+import greencity.entity.TariffsInfoReceivingEmployee;
 import greencity.entity.order.TariffsInfo;
 import greencity.entity.user.employee.Employee;
 import greencity.entity.user.employee.EmployeeFilterView;
@@ -27,23 +27,28 @@ import greencity.exceptions.user.UserNotFoundException;
 import greencity.filters.EmployeeFilterCriteria;
 import greencity.filters.EmployeePage;
 import greencity.repository.EmployeeCriteriaRepository;
+import greencity.repository.EmployeeOrderPositionRepository;
 import greencity.repository.EmployeeRepository;
 import greencity.repository.PositionRepository;
 import greencity.repository.ReceivingStationRepository;
-import greencity.repository.UserRepository;
 import greencity.repository.TariffsInfoRepository;
-import greencity.repository.EmployeeOrderPositionRepository;
+import greencity.repository.UserRepository;
 import greencity.service.phone.UAPhoneNumberUtil;
+import jakarta.transaction.Transactional;
 import lombok.Data;
 import org.modelmapper.ModelMapper;
-import org.springframework.data.domain.*;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
-import jakarta.transaction.Transactional;
-import java.util.List;
+
 import java.util.ArrayList;
-import java.util.Map;
 import java.util.LinkedHashMap;
+import java.util.List;
+import java.util.Map;
 import java.util.UUID;
 import java.util.stream.Collectors;
 
@@ -58,9 +63,9 @@ public class UBSManagementEmployeeServiceImpl implements UBSManagementEmployeeSe
     private final UserRemoteClient userRemoteClient;
     private final FileService fileService;
     private final ModelMapper modelMapper;
-    private final EmployeeCriteriaRepository employeeCriteriaRepository;
     private final EmployeeOrderPositionRepository employeeOrderPositionRepository;
     private String defaultImagePath = AppConstant.DEFAULT_IMAGE;
+    private final EmployeeCriteriaRepository employeeCriteriaRepository;
 
     /**
      * {@inheritDoc}
@@ -89,18 +94,15 @@ public class UBSManagementEmployeeServiceImpl implements UBSManagementEmployeeSe
         }
         checkValidPosition(dto.getEmployeeDto().getEmployeePositions());
 
-        Employee employee = buildEmployeeFromEmployeeWithTariffsIdDto(dto);
+        Employee employee = modelMapper.map(dto, Employee.class);
         employee.setUuid(UUID.randomUUID().toString());
         employee.setEmployeeStatus(EmployeeStatus.ACTIVE);
         employee.setImagePath(image != null ? fileService.upload(image) : defaultImagePath);
-        if (employee.getTariffsInfoReceivingEmployees() == null) {
-            employee.setTariffsInfoReceivingEmployees(new ArrayList<>());
-        }
 
         List<TariffWithChatAccess> tariffs = dto.getTariffs();
         if (tariffs != null) {
             tariffs.forEach(tariff -> {
-                TariffsInfoRecievingEmployee tariffsInfoReceivingEmployees = new TariffsInfoRecievingEmployee();
+                TariffsInfoReceivingEmployee tariffsInfoReceivingEmployees = new TariffsInfoReceivingEmployee();
                 tariffsInfoReceivingEmployees.setEmployee(employee);
                 tariffsInfoReceivingEmployees.setHasChat(tariff.getHasChat());
                 tariffsInfoReceivingEmployees.setTariffsInfo(tariffsInfoRepository.findById(tariff.getTariffId())
@@ -112,26 +114,11 @@ public class UBSManagementEmployeeServiceImpl implements UBSManagementEmployeeSe
         return modelMapper.map(employeeRepository.save(employee), EmployeeWithTariffsDto.class);
     }
 
-    private Employee buildEmployeeFromEmployeeWithTariffsIdDto(EmployeeWithTariffsIdDto employeeWithTariffsIdDto) {
-        return Employee.builder()
-            .firstName(employeeWithTariffsIdDto.getEmployeeDto().getFirstName())
-            .lastName(employeeWithTariffsIdDto.getEmployeeDto().getLastName())
-            .phoneNumber(employeeWithTariffsIdDto.getEmployeeDto().getPhoneNumber())
-            .email(employeeWithTariffsIdDto.getEmployeeDto().getEmail())
-            .employeePosition(employeeWithTariffsIdDto.getEmployeeDto().getEmployeePositions().stream()
-                .map(positionDto -> Position.builder()
-                    .id(positionDto.getId())
-                    .name(positionDto.getName())
-                    .nameEn(positionDto.getNameEn())
-                    .build())
-                .collect(Collectors.toSet()))
-            .build();
-    }
-
     private void signUpEmployee(Employee employee) {
+        String firstName = employee.getFirstName();
         EmployeeSignUpDto signUpDto = EmployeeSignUpDto.builder()
             .email(employee.getEmail())
-            .name(employee.getFirstName())
+            .name(firstName.substring(0, 1).toUpperCase() + firstName.substring(1))
             .uuid(employee.getUuid())
             .positions(employee.getEmployeePosition().stream()
                 .map(position -> PositionDto.builder()
@@ -170,7 +157,7 @@ public class UBSManagementEmployeeServiceImpl implements UBSManagementEmployeeSe
             getEmployeeDto.setTariffs(employees.stream()
                 .filter(employee -> employee.getId().equals(employeeFilterView.getEmployeeId()))
                 .flatMap(employee -> employee.getTariffsInfoReceivingEmployees().stream()
-                    .map(tariffsInfoRecievingEmployee -> modelMapper.map(tariffsInfoRecievingEmployee.getTariffsInfo(),
+                    .map(tariffsInfoReceivingEmployee -> modelMapper.map(tariffsInfoReceivingEmployee.getTariffsInfo(),
                         GetTariffInfoForEmployeeDto.class)))
                 .collect(Collectors.toList()));
             initializeGetEmployeeDtoCollections(getEmployeeDto);
@@ -195,7 +182,7 @@ public class UBSManagementEmployeeServiceImpl implements UBSManagementEmployeeSe
             .filter(employee -> employee.getId().equals(emplView.getEmployeeId()))
             .flatMap(employee -> employee.getEmployeePosition().stream()
                 .map(position -> modelMapper.map(position, PositionDto.class)))
-            .toList();
+            .collect(Collectors.toList());
 
         getEmployeeDto.getEmployeePositions().addAll(positionsDtos);
     }
@@ -205,11 +192,11 @@ public class UBSManagementEmployeeServiceImpl implements UBSManagementEmployeeSe
         List<GetTariffInfoForEmployeeDto> tariffs = employees.stream()
             .filter(employee -> employee.getId().equals(emplView.getEmployeeId()))
             .flatMap(employee -> employee.getTariffsInfoReceivingEmployees().stream()
-                .map(tariffsInfoRecievingEmployee -> {
+                .map(tariffsInfoReceivingEmployee -> {
                     GetTariffInfoForEmployeeDto tariffDto =
-                        modelMapper.map(tariffsInfoRecievingEmployee.getTariffsInfo(),
+                        modelMapper.map(tariffsInfoReceivingEmployee.getTariffsInfo(),
                             GetTariffInfoForEmployeeDto.class);
-                    tariffDto.setHasChat(tariffsInfoRecievingEmployee.getHasChat());
+                    tariffDto.setHasChat(tariffsInfoReceivingEmployee.getHasChat());
                     return tariffDto;
                 }))
             .collect(Collectors.toList());
@@ -254,13 +241,9 @@ public class UBSManagementEmployeeServiceImpl implements UBSManagementEmployeeSe
         Employee updatedEmployee = modelMapper.map(dto, Employee.class);
         updatedEmployee.setUuid(upEmployee.getUuid());
         updatedEmployee.setEmployeeStatus(upEmployee.getEmployeeStatus());
-        if (updatedEmployee.getTariffsInfoReceivingEmployees() == null) {
-            updatedEmployee.setTariffsInfoReceivingEmployees(new ArrayList<>());
-        }
-
         if (dto.getTariffs() != null) {
-            dto.getTariffs().forEach(tariff -> {
-                TariffsInfoRecievingEmployee tariffsInfoReceivingEmployees = new TariffsInfoRecievingEmployee();
+            dto.getTariffs().stream().forEach(tariff -> {
+                TariffsInfoReceivingEmployee tariffsInfoReceivingEmployees = new TariffsInfoReceivingEmployee();
                 tariffsInfoReceivingEmployees.setEmployee(updatedEmployee);
                 tariffsInfoReceivingEmployees.setHasChat(tariff.getHasChat());
                 tariffsInfoReceivingEmployees.setTariffsInfo(tariffsInfoRepository.findById(tariff.getTariffId())
@@ -268,7 +251,6 @@ public class UBSManagementEmployeeServiceImpl implements UBSManagementEmployeeSe
                 updatedEmployee.getTariffsInfoReceivingEmployees().add(tariffsInfoReceivingEmployees);
             });
         }
-
         if (image != null) {
             String imageUrlToDelete = upEmployee.getImagePath();
             updatedEmployee.setImagePath(fileService.upload(image));
@@ -278,7 +260,6 @@ public class UBSManagementEmployeeServiceImpl implements UBSManagementEmployeeSe
         } else {
             updatedEmployee.setImagePath(dto.getEmployeeDto().getImage());
         }
-
         return modelMapper.map(employeeRepository.save(updatedEmployee), EmployeeWithTariffsDto.class);
     }
 
